# groot-engine

./: .gitignore  404.html  CMakeLists.txt  GrootEngineConfig.cmake.in  LICENSE.md  README.md  THIRD_PARTY.md  index.html  mkdocs.yml  uninstall.sh
docs/: index.md
docs/getting_started/: compute.md  graphics.md  input.md  installation.md
getting_started/compute/: index.html
getting_started/graphics/: index.html
getting_started/input/: index.html
getting_started/installation/: index.html
include/: groot.hpp
include/groot/: engine.hpp  enums.hpp  groot.hpp  gui.hpp  linalg.hpp  log.hpp  object.hpp  rid.hpp  structs.hpp
search/: search_index.json
src/: CMakeLists.txt  allocator.cpp  engine.cpp  gui.cpp  input_manager.cpp  linalg.cpp  log.cpp  materials.cpp  object.cpp  objects.cpp  parsers.cpp  renderer.cpp  rid.cpp  shader_compiler.cpp  stb_image.cpp  structs.cpp  tiny_obj_loader.cpp  transform.cpp  vkcontext.cpp  vulkan_context.cpp
src/include/: allocator.hpp  buffer.hpp  engine.hpp  enums.hpp  gui.hpp  input_mananger.hpp  linalg.hpp  log.hpp  materials.hpp  object.hpp  objects.hpp  parsers.hpp  renderer.hpp  rid.hpp  shader_compiler.hpp  structs.hpp  transform.hpp  vulkan_context.hpp
stylesheets/: extra.css
tests/: CMakeLists.txt  buffers.cpp  descriptor_sets.cpp  dispatch.cpp  engine.cpp  images.cpp  linalg.cpp  mesh.cpp  objects.cpp  pipelines.cpp  render.cpp  sampler.cpp  shader_compilation.cpp  u_engine.cpp
tests/dat/: cube_comp.glsl  cube_frag.glsl  cube_vert.glsl  plane_frag.glsl  plane_vert.glsl  post.comp  render_frag.glsl  render_vert.glsl
tests/shaders/: compute.glsl  shader.comp  shader.frag  shader.vert  shader2.frag  shader3.frag
